--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -17,12 +18,14 @@
   },
   "homepage": "https://github.com/alexjamesmalcolm/cheating-at-wordle#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "jest": "^27.4.7",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "rambda": "^7.0.1"
   }
 }
